Add jvm parameters